--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^3.4.0",
     "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "mongoose": "^4.8.6",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
